Layout bug on the post options

--- a/styles/src/page.css
+++ b/styles/src/page.css
@@ -46,6 +46,7 @@
 		}
 
 .post_options {
+	margin-top: 10px;
 	background: #dedede url("/wp-content/themes/metro/images/post_options/elipsis.png") no-repeat 97% 10px;
 	padding: 5px;
 	cursor: pointer;
